create useCase user
